Builds on JDK 11
Signed-off-by: Markus KARG <markus@headcrashing.eu>